network/nodes: allow setting device name
